feat: update EmailVerificationOtpRepository to return void for invalidateAllForEmail and improve KeycloakUserService to use getFirst for better clarity